--- a/kilt-core/pom.xml
+++ b/kilt-core/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>de.poiu.fez</groupId>
       <artifactId>fez</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
+      <version>1.1.0</version>
     </dependency>
     <dependency>
       <groupId>de.poiu.apron</groupId>
