--- a/kilt-ant/pom.xml
+++ b/kilt-ant/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>de.poiu.kilt</groupId>
     <artifactId>kilt</artifactId>
-    <version>0.3.2-SNAPSHOT</version>
+    <version>0.4.0</version>
   </parent>
 
   <artifactId>kilt-ant</artifactId>
