--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.poiu.kilt</groupId>
   <artifactId>kilt</artifactId>
-  <version>0.3.1-SNAPSHOT</version>
+  <version>0.4.0</version>
   <packaging>pom</packaging>
   <name>kilt</name>
   <description>Converts a whole i18n properties folder into a xls file and merge it back to the properties file</description>
