--- a/kilt-core/pom.xml
+++ b/kilt-core/pom.xml
@@ -71,5 +71,10 @@
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>3.1.0</version>
+    </dependency>
   </dependencies>
 </project>
