Replace java globbing with ant-style globbing again
Java globbing uses an uncommon syntax for 0-n directory hierarchies:
  **.properties
instead of the more common
  **/*.properties
Also it doesn't detect if equivalent paths are the same due to some
indirection.
Therefore plexus-utils is used again to do the matching againts
patterns. A bit custom logic around that allows normalization of patterns
and paths and specifying patterns either as absolute paths or as
relative to the propertyRootDirectory.

--- a/kilt-example/pom.xml
+++ b/kilt-example/pom.xml
@@ -59,7 +59,7 @@
         <version>${project.version}</version>
         <configuration>
           <!-- Specify which files we want to cover with kilt -->
-          <i18nIncludes>i18n/**.properties</i18nIncludes>
+          <i18nIncludes>i18n/**/*.properties</i18nIncludes>
           <i18nExcludes>i18n/nongenerated*.properties</i18nExcludes>
           <!-- even though we use Java 8 we store our .properties files
                in UTF-8 format -->
@@ -105,7 +105,7 @@
                    We do this here by specifying a different set of files
                    to include, which also includes the
                    src/main/resources/config.properties file. -->
-              <i18nIncludes>**.properties</i18nIncludes>
+              <i18nIncludes>**/*.properties</i18nIncludes>
             </configuration>
           </execution>
         </executions>
