--- a/kilt-core/pom.xml
+++ b/kilt-core/pom.xml
@@ -60,6 +60,11 @@
       <artifactId>javax.annotation-api</artifactId>
       <version>1.3.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>3.3.0</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
