Provide example application
The application show the usage of Kilt in a maven-based application.

It generates and uses a facade for accessing the translated resources.

It also uses the kilt-maven-plugin to export/import the translations
to/from XLS(X).

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     <module>kilt-ant</module>
     <module>kilt-cli</module>
     <module>kilt-runtime</module>
+    <module>kilt-example</module>
   </modules>
 
 
