--- a/kilt-ant/src/main/resources/kilt.properties
+++ b/kilt-ant/src/main/resources/kilt.properties
@@ -13,24 +13,20 @@ propertiesRootDirectory = i18n
 i18nIncludes = **/*.properties
 
 # filter for property files to exclude from the processing
-#i18nExcludes = 
+i18nExcludes =
 
 # The file encoding of the property files
 propertyFileEncoding = ISO-8859-1
 
 # Print verbose output
-verbose
+verbose = true
 
 
 #####################################################################################################
-## The following properties are only used for the 'export-xls' and 'import-xls' commands 
+## The following properties are only used for the 'export-xls' and 'import-xls' commands
 
 # The XLS(X) file to export to / import (Important: the file suffix decides about the file format!)
 xlsFile = i18n.xlsx
-
-# Defines if properties with a assigned blank value in the XLS file are deleted 
-# when written back to the property files
-#deleteEmptyProperties = false
 
 
 #####################################################################################################
@@ -75,6 +71,7 @@ reformatKeysAndValues = false
 # pairs in this template file.
 # This parameter may not be given if "byKey" is set to true
 #template = i18n/messages.properties
+template =
 
 # How to handle comments and empty lines in the .properties files.
 attachCommentsTo = NEXT_PROPERTY
