--- a/kilt-ant/pom.xml
+++ b/kilt-ant/pom.xml
@@ -29,6 +29,11 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>de.poiu.fez</groupId>
+      <artifactId>fez</artifactId>
+      <version>1.1.0</version>
+    </dependency>
   </dependencies>
 
   <build>
