--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,16 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.0.1</version>
+          <version>3.1.1</version>
+          <configuration>
+            <!-- The maven-javadoc-plugin is broken at the moment for
+                 java version > 1.8. The below setting is necessary when
+                 building with Java 9+
+                 See https://issues.apache.org/jira/browse/MJAVADOC-595
+                 and https://stackoverflow.com/a/54323506/572645
+                 and https://stackoverflow.com/a/49477048/572645 -->
+            <!-- <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable> -->
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
