--- a/kilt-cli/pom.xml
+++ b/kilt-cli/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>de.poiu.kilt</groupId>
     <artifactId>kilt</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
 
   <artifactId>kilt-cli</artifactId>
