Fix build_gh-pages.sh script
- Use github access token
- Correctly refer to travis environment variables
- specify asciidoctor version to use for stable builds
- Generate gh-pages only once after all build steps are done

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,11 @@ jdk:
   - openjdk13
   - openjdk-ea
 
-after_success:
-  - ./build_gh-pages.sh
+jobs:
+  include:
+    - stage: deploy # generate gh-pages after all builds succeeded
+      install: skip # we don't need the jdks for the generation of gh-pages
+      script:
+        - gem install asciidoctor --version 1.5.8
+        - ./build_gh-pages.sh
+
