--- a/kilt-ant/pom.xml
+++ b/kilt-ant/pom.xml
@@ -32,7 +32,7 @@
     <dependency>
       <groupId>de.poiu.fez</groupId>
       <artifactId>fez</artifactId>
-      <version>1.1.0</version>
+      <version>1.1.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
