Only build with Java 9-11
Errorprone is only compatible with Java8, 9, 10 and 11 (and even 8 only
with a special configuration).

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ jdk:
   - oraclejdk11
   - oraclejdk-ea
   - openjdk11
-  - openjdk12
-  - openjdk13
-  - openjdk-ea
+    #- openjdk12
+    #- openjdk13
+    #- openjdk-ea
 
 jobs:
   include:
