--- a/kilt-core/pom.xml
+++ b/kilt-core/pom.xml
@@ -35,6 +35,11 @@
       <version>4.1.1</version>
     </dependency>
     <dependency>
+      <groupId>org.eclipse.collections</groupId>
+      <artifactId>eclipse-collections</artifactId>
+      <version>10.4.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>28.1-jre</version>
