--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,13 +9,13 @@ jobs:
 
     strategy:
       matrix:
-        java: [9, 11, 17, 20, 21-ea]
+        java: [9, 11, 17, 21, 22-ea]
 
     steps:
-    - uses: kamiazya/setup-graphviz@v1
-    - uses: actions/checkout@v3
+    - uses: ts-graphviz/setup-graphviz@v1
+    - uses: actions/checkout@v4
     - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         distribution: 'zulu'
         java-version: ${{ matrix.java }}
