Try to build native image
This doesn’t work yet.

Building for Windows fails with:
“Failed to execute goal de.poiu.kilt:kilt-maven-plugin:1.0.2-SNAPSHOT:create-facade (kilt-facade-generation) on project kilt-runtime: Execution kilt-facade-generation of goal de.poiu.kilt:kilt-maven-plugin:1.0.2-SNAPSHOT:create-facade failed: Illegal char <*> at index 0: **/*.properties”

Building for Linux with musl (as a statically linked image) fails with:
“com.oracle.svm.core.util.VMError$HostedError: Unable to run
'/tmp/SVM-5801301810423631605/AArch64LibCHelperDirectives' to compute
offsets in C data structures. Is it possible that your antivirus
software interferes and puts the resulting file into quarantine?”

Building for Linux without musl succeeds, but generates an binary that
fails at runtime with the message:
“The current machine does not support all of the following CPU features that are required by the image: [CX8, CMOV, FXSR, MMX, SSE, SSE2, SSE3, SSSE3, SSE4_1, SSE4_2, POPCNT, LZCNT, AVX, AVX2, BMI1, BMI2, FMA].
Please rebuild the executable with an appropriate setting of the -march option.”

--- a/kilt-cli/pom.xml
+++ b/kilt-cli/pom.xml
@@ -32,10 +32,28 @@
       <artifactId>picocli</artifactId>
       <version>4.7.5</version>
     </dependency>
+
+    <dependency>
+      <groupId>info.picocli</groupId>
+      <artifactId>picocli-codegen</artifactId>
+      <version>4.7.5</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <annotationProcessors>
+            <!-- The annotation processor needs to be explicitly declared in
+                 Java versions from 21 onwards -->
+            <annotationProcessor>picocli.codegen.aot.graalvm.processor.NativeImageConfigGeneratorProcessor</annotationProcessor>
+          </annotationProcessors>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -75,4 +93,39 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>native</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <version>0.9.28</version>
+            <extensions>true</extensions>
+            <executions>
+              <execution>
+                <id>build-native</id>
+                <goals>
+                  <goal>compile-no-fork</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+              <execution>
+                <id>test-native</id>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <phase>test</phase>
+              </execution>
+            </executions>
+            <configuration>
+              <!-- ... -->
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
