--- a/kilt-core/pom.xml
+++ b/kilt-core/pom.xml
@@ -51,9 +51,9 @@
     </dependency>
     <!-- For Facade generation -->
     <dependency>
-      <groupId>com.squareup</groupId>
+      <groupId>com.palantir.javapoet</groupId>
       <artifactId>javapoet</artifactId>
-      <version>1.13.0</version>
+      <version>0.7.0</version>
     </dependency>
     <dependency>
       <groupId>jakarta.annotation</groupId>
